# pydwf

./: .gitignore  .readthedocs.yaml  DemoAnalogIoAPI.py  DemoAudioOut.py  DemoCanProtocolAPI.py  DemoI2cProtocolAPI.py  DemoSpiProtocolAPI.py  DemoUartProtocolAPI.py  EnumerateDigilentDevices.py  LICENSE  README.md  SummarizeAPI.py  TestAnalogIO.py  UsingAnalogIO.py  UsingAnalogOut.py  UsingDigitalCAN.py  UsingDigitalI2C.py  UsingDigitalIO.py  UsingDigitalOut.py  UsingDigitalSPI.py  UsingDigitalUart.py  setup.cfg
doc/source/: AnalogIO_Instrument_API.rst  CAN_Protocol_API.rst  (+18 more)
documentation/: mk-docs.sh
examples/: AnalogInRecordMode.py  AnalogInSimple.py  AnalogOutContinuousPlay.py  AnalogOutSimple.py  DemoAnalogInRecordMode.py  DemoAnalogInSimple.py  DemoAnalogIoAPI.py  DemoAnalogOutContinuousPlay.py  DemoAnalogOutputContinuousPlayback.py  DemoCanProtocolAPI.py  DemoDigitalInAPI.py  DemoDigitalIoAPI.py  DemoDigitalOutAPI.py  DemoI2cProtocolAPI.py  DemoSpiProtocolAPI.py  DemoUartProtocolAPI.py  DigitalIoAPI.py  ProtocolI2C.py  README  SpiProtocolAPI.py  UartProtocolAPI.py  demo_utilities.py
maintainer/: .gitignore  GeneratePythonFunctionSignaturesFromDwfHeaderFile.py  GeneratePythonFunctionSignaturesFromHeaderFile.py  README.txt  TODO.txt  documented_functions_v20210421_Unofficial.txt  documented_functions_v3.16.3.txt
pydwf/: __init__.py  __main__.py  dwf_function_signatures.py
reverse_engineering/: UnderstandAnalogInRecordMode.py
scripts/: CheckHeaderFileAgainstDocumentation.py  CheckHeaderFileTypeUsage.py  ShowDwfLibraryVersion.py  SummarizeAPI.py  pydwf-tool.py
(+24 files in other folders)
