[metadata]

name = pydwf

version = 0.2.0

author = Sidney Cadot
author_email = sidney@jigsaw.nl

description = A package to control Digilent Waveforms devices

long_description = file: README.md
long_description_content_type = text/markdown

url = https://pypi.org/project/pydwf/

project_urls =
    Source Repository = https://github.com/sidneycadot/pydwf/

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]

packages = pydwf

python_requires = >=3.6
