
# To build a source and binary package:
#
# $ rm -rf dist ; python3 -m build -n
#
# To upload to PyPI:
#
# $ python3 -m twine upload -u <username> -p <password>
# https://setuptools.readthedocs.io/en/latest/references/keywords.html

[metadata]

name = pydwf

version = 0.3.3

author = Sidney Cadot
author_email = sidney@jigsaw.nl

description = A package to control Digilent Waveforms devices

long_description = file: README.md
long_description_content_type = text/markdown

url = https://pypi.org/project/pydwf/

project_urls =
    Source Repository = https://github.com/sidneycadot/pydwf/
    Documentation = https://pydwf.readthedocs.io/en/latest/

classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering

[options]

packages = pydwf

python_requires = >=3.6

install_requires =
    numpy
